fix: DELETE user klab. remove sportti_id_list table
