# docs/swagger.yaml
@@ -3553,6 +3553,51 @@ paths:
       tags:
       - KLAB - Data
   /klab/user:
+    delete:
+      consumes:
+      - application/json
+      description: Removes a KLab customer by sportti_id. Related measurement_list
+        and dir* tables are removed via FK cascades.
+      parameters:
+      - description: Sportti ID
+        in: query
+        name: sportti_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/swagger.ValidationErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/swagger.UnauthorizedResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/swagger.ForbiddenResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/swagger.NotFoundResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/swagger.InternalServerErrorResponse'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/swagger.ServiceUnavailableResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete a customer (hard delete)
+      tags:
+      - KLAB - User
     get:
       consumes:
       - application/json
